--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Quailtrail: smoke",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceFolder}/main.py",
+      "program": "${workspaceFolder}/prototype/main.py",
       "console": "integratedTerminal",
       "justMyCode": false,
       "args": ["--config", "quail.yml", "--targets", "daily"]
